[project]
name = "api_doc_manager"
version = "0.1.0"
description = "api-doc-manager using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.5.0"
]

[project.scripts]
api_doc_manager = "api_doc_manager.main:run"
run_crew = "api_doc_manager.main:run"
train = "api_doc_manager.main:train"
replay = "api_doc_manager.main:replay"
test = "api_doc_manager.main:test"
run_with_trigger = "api_doc_manager.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
